--- a/index.html
+++ b/index.html
@@ -64,9 +64,8 @@ within healthy limits.  It provides weekly unit averages by week, month, and yea
 so that users can if desired bring down the ammount they consume.
 
 <p>To get started, <b><a href=./drinkingdiary.zip>download app bundle</a></b>, unzip folder to your desktop and open the contained web page in your favourite browser.  Click on any day to enter the number of alcoholic units consumed - the diary will track your totals and averages from there on in.</p>
-<p><b>Existing Users:</b> Please see instructions on importing data from the old site <a href="./regular_user_instructions.html">here</a>.
-<p>To contact the webmaster, see <a href="./contact.html">here</a></p>
-<p><img src=/images/screenshot_fp_2010.gif width=679 height=179 border=0>.  
+<p><b>Existing Users:</b> Please see instructions on importing data from the old site <a href="./regular_user_instructions.html">here</a>.  Contact details can also be found on this page.</p>
+<p><img src=/images/jsdd_screenshot.png border=0>.  
 
 </td>
 </tr>
